# fxklife

./: CMakeLists.txt  README.md
cmake/: common_cmake.cmake  dependencies.cmake  ffmpeg.cmake  libusb.cmake
src/: AOAService.cpp  AOAService.h  CMakeLists.txt  HeadUnit.cpp  HeadUnit.h  MobileDevice.cpp  MobileDevice.h  ServiceDiscovery.cpp  ServiceDiscovery.h  TransferPort.cpp  TransferPort.h  VideoService.h  VideoService_win.cpp  main copy 2.cpp  main.cpp
src/av/: CaptureAudio.h  CaptureAudioWasapi.cpp  CaptureAudioWasapi.h  CaptureDesktop.h  CaptureDesktopDxgi.cpp  CaptureDesktopDxgi.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h
src/carlife/: AOA.cpp  AOA.h  CarlifeHeadUnit.cpp  CarlifeHeadUnit.h  CarlifeMobileDevice.cpp  CarlifeMobileDevice.h
src/carlife/channel/: CarLifeType.h  ChannelBase.cpp  ChannelBase.h  ChannelBaseMacro.h  CmdChannel.cpp  CmdChannel.h  CtrlChannel.cpp  CtrlChannel.h  MediaChannel.cpp  MediaChannel.h  TTSChannel.cpp  TTSChannel.h  VRChannel.cpp  VRChannel.h  VideoChannel.cpp  VideoChannel.h
src/carlife/proto/: CarlifeDeviceInfoProto.proto
